--- a/kustomize/cronjobs/sentio_import_cronjob.yaml
+++ b/kustomize/cronjobs/sentio_import_cronjob.yaml
@@ -13,7 +13,7 @@ spec:
         spec:
           containers:
           - name: parlameter-sentio-import-runner
-            image: parladata
+            image: parladata-medvode
             env:
               - name: DJANGO_SETTINGS_MODULE
                 value: parladata_project.settings.k8s
