--- a/kustomize/deployment.yaml
+++ b/kustomize/deployment.yaml
@@ -19,7 +19,7 @@ spec:
           emptyDir: {}
       initContainers:
         - name: collectstatic
-          image: parladata
+          image: parladata-trbovlje
           volumeMounts:
             - name: parladata-shared-storage
               mountPath: /pvc
@@ -34,7 +34,7 @@ spec:
             - name: DJANGO_STATIC_ROOT
               value: "/pvc/static"
             - name: DJANGO_STATIC_URL_BASE
-              value: "https://files.parladata.lb.djnd.si/static/"
+              value: "https://files.parladata-trbovlje.lb.djnd.si/static/"
           envFrom:
             - secretRef:
                 name: parladata-credentials
@@ -48,7 +48,7 @@ spec:
               memory: 200Mi
               cpu: 200m
         - name: migrate
-          image: parladata
+          image: parladata-trbovlje
           command:
             - python
             - manage.py
@@ -70,7 +70,7 @@ spec:
               cpu: 200m
       containers:
         - name: parladata
-          image: parladata
+          image: parladata-trbovlje
           volumeMounts:
             - name: parladata-shared-storage
               mountPath: /pvc
@@ -102,7 +102,7 @@ spec:
             - name: DJANGO_STATIC_ROOT
               value: "/pvc/static"
             - name: DJANGO_STATIC_URL_BASE
-              value: "https://files.parladata.lb.djnd.si/static/"
+              value: "https://files.parladata-trbovlje.lb.djnd.si/static/"
             - name: INSTALATION_NAME
               value: default
           resources:
