--- a/kustomize/ingress.yaml
+++ b/kustomize/ingress.yaml
@@ -3,16 +3,27 @@ kind: Ingress
 metadata:
   name: parladata
   annotations:
-    cert-manager.io/cluster-issuer: "letsencrypt-production"
+    cert-manager.io/cluster-issuer: "letsencrypt-sandbox"
     nginx.ingress.kubernetes.io/proxy-body-size: 10m
 spec:
   ingressClassName: nginx
   tls:
     - hosts:
         - parladata-trbovlje.lb.djnd.si
+        - data.trbovlje.parlameter.si
       secretName: parladata-tls
   rules:
     - host: parladata-trbovlje.lb.djnd.si
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: parladata
+                port:
+                  number: 8000
+    - host: data.trbovlje.parlameter.si
       http:
         paths:
           - path: /
@@ -39,9 +50,20 @@ spec:
   tls:
     - hosts:
         - files.parladata-trbovlje.lb.djnd.si
+        - files.trbovlje.parlameter.si
       secretName: parladata-nginx-tls
   rules:
     - host: files.parladata-trbovlje.lb.djnd.si
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: parladata-nginx
+                port:
+                  number: 80
+    - host: files.trbovlje.parlameter.si
       http:
         paths:
           - path: /
