--- a/kustomize/ingress.yaml
+++ b/kustomize/ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: parladata
   annotations:
-    cert-manager.io/cluster-issuer: "letsencrypt-sandbox"
+    cert-manager.io/cluster-issuer: "letsencrypt-production"
     nginx.ingress.kubernetes.io/proxy-body-size: 10m
 spec:
   ingressClassName: nginx
