--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ pyicu
 sentry-sdk[django]
 eventregistry
 tablib
-django-import-export
+django-import-export==3.3.7
 djangorestframework-csv
 drf-recaptcha
 xmltodict==0.12.0
