--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Set up PostgreSQL
         uses: harmon758/postgresql-action@v1
         with:
-          postgresql version: "latest"
+          postgresql version: "15"
           postgresql db: "parladata"
           postgresql user: postgres
           postgresql password: postgres
