--- a/kustomize/kustomization.yaml
+++ b/kustomize/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
 
   # uncomment cronjob to enable it
   - cronjobs/task_runner_cronjob.yaml
+  - cronjobs/send_word_notifications.yaml
 images:
   - name: parladata-slovenija
     newName: rg.fr-par.scw.cloud/djnd/parladata-slovenija
