--- a/requirements.txt
+++ b/requirements.txt
@@ -44,3 +44,4 @@ scikit-learn==1.5.1
 python-crfsuite
 marisa-trie
 git+https://github.com/Desklop/Uk_Stemmer
+git+https://github.com/danesjenovdan/classla.git@upgrade-numpy
