--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -36,6 +36,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libmemcached-dev libsasl2-modules
           python -m pip install --upgrade pip
+          echo "git+https://github.com/danesjenovdan/classla.git@upgrade-numpy" >> requirements.txt
           pip install -r requirements.txt
 
       - name: Test with pytest
